2010-09-16  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-00
	* 'remove unreference sequences' fixed
	* fixed bung in Diff regarding OutputModules
	* event contents are now fully sorted after loading:
	contents, streams, datasets, paths and statements are ordered
	alphabetically
	* content statements in the editor can be ordered by path now
	* statements associated with a path are properly loaded
	
2010-03-18  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-04-09
	* 255 path limitiation in converter addressed by Ulf

2010-03-10  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-04-08
	* gui: bugfix, correctly set the version of the chosen
	configuration in PickConfigurationDialog when the release is being
	fixed.

2010-03-02  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-04-07
	* fix import of (non-existing) reference containers
	* add import of contents, streams, and datasets

2010-03-01  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-04-06
	* filter endpaths from dataset 'Add Path' context menu
	* unassigned paths of the parent stream appear now bold in dataset
	editor dialog

	* tag V01-04-05
	* gui: fix path import, where upon import of an existing path its
	information would disappear from streams / datasets / OMs / etc.

	* tag V01-04-04
	* gui/db: fix for bug 28 (Vasu)
	* db: add stream/dataset psets to online converter as well (moved
	the methods to ConverterBase)
	* gui: fix bug such that paths can now be assigned to PDs if they
	are already associated with the parent stream
	* gui: indicate unassigned paths of the parent stream as bold in
	the 'Add Path' context menu of datasets
	* gui: indicate paths in a stream not yet assigned to any dataset
	as red in the tree view

2010-02-12  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-04-03
	* converter: OfflineConverter properly add stream/PD psets 
